[package]
name = "jup-sdk"
version = "0.1.0"
edition = "2024"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "jito sdk"
keywords = ["trade", "crypto", "finance", "solana", "jupiter"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/jup-sdk"

[dependencies]
solana-network-sdk = "0.2.2"
solana-client = "3.0.0"
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-transaction-status = "3.0.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
url = "2.4"
